# tex-fmt

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  NEWS.md  README.md  build.rs  default.nix  flake.nix  index.html  index.js  justfile  notes.org  overlay.nix  perf.sh  prof.sh  shell.nix  tex-fmt.toml  tex_fmt_bg.wasm.d.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  flake.yml  publish.yml
completion/: README.md  _tex-fmt  _tex-fmt.ps1  tex-fmt.bash  tex-fmt.elv  tex-fmt.fish
ctan/: README.md  latex-formatter.pkg  latex-formatter.tex  tex-fmt.pkg
extra/: binary.sh  build.sh  card.py  latex.sh  logo.py  perf.sh  prof.sh  puthesis.cls
man/: README.md  tex-fmt.1
pkg/: tex_fmt.d.ts  tex_fmt.js  tex_fmt_bg.wasm  tex_fmt_bg.wasm.d.ts
src/: args.rs  bin.rs  cli.rs  colors.rs  command.rs  comments.rs  config.rs  errors.rs  file.rs  format.rs  ignore.rs  indent.rs  leave.rs  lib.rs  logging.rs  main.rs  parse.rs  pattern.rs  print.rs  program.rs  read.rs  regexes.rs  search.rs  subs.rs  table.rs  tests.rs  verbatim.rs  wasm.rs  wrap.rs  write.rs
test/: document_in.tex  example1_out.tex
tests/: brackets_out.tex  comments_in.tex  comments_out.tex  cv_in.tex  environment_lines_in.tex  environment_lines_out.tex  example2_in.tex  example2_out.tex  example3_in.tex  example4_in.tex  ignore_in.tex  ignore_out.tex  lists_in.tex  lists_out.tex  long_lines_in.tex  long_lines_out.tex  masters_dissertation_in.tex  masters_dissertation_out.tex  phd_dissertation_in.tex  phd_dissertation_out.tex  readme_out.tex  short_document_in.tex  short_document_out.tex  thesis_in.tex  thesis_out.tex  tikz_network_in.sty  tikz_network_out.sty  unicode_in.tex  unicode_out.tex  verbatim_in.tex  verbatim_out.tex  wgu_cv_in.cls  wrap_in.tex  wrap_out.tex
tests/align_tables/: tex-fmt.toml
tests/align_tables/source/: align_tables.tex
tests/comments/source/: comments.tex
tests/enumerate_paren/: tex-fmt.toml
tests/enumerate_paren/source/: enumerate_paren.tex
tests/environments/source/: environment_lines.tex
tests/format_tables/source/: format_tables.tex
tests/in/: cam-thesis.cls  masters_dissertation.tex  ociamthesis.cls  short_document.tex  unicode.tex  verbatim.tex
tests/large/source/: cam-thesis.cls  masters_dissertation.tex  ociamthesis.cls  tikz_network.sty
tests/linear_map_chinese/: tex-fmt.toml
tests/linear_map_chinese/source/: linear_map_chinese.tex
tests/lists/: tex-fmt.toml
tests/lists/source/: lists.tex
tests/no_indent_envs/: tex-fmt.toml
tests/no_indent_envs/source/: no_indent_envs.tex
tests/readme/source/: readme.tex
tests/short_document/source/: short_document.tex
tests/source/: cam-thesis.cls  comments.tex  environment_lines.tex  heavy_wrap.tex  higher_categories_thesis.tex  math_delimiters.tex  phd_dissertation.tex  rewrap.tex  sections.tex  unicode.tex  verbatim.tex  wrap.tex
tests/tables/: cli.txt  tex-fmt.toml
tests/tables/source/: overleaf_tables.tex  tables.tex
tests/tabsize/: cli.txt  tex-fmt.toml
tests/unicode/source/: unicode.tex
tests/verb/source/: lstinline.tex  verb.tex  verbplus.tex
tests/verbatim/: tex-fmt.toml
tests/verbatim/source/: verbatim.tex
tests/wrap_chars/: tex-fmt.toml
tests/wrap_chars/source/: wrap_chars.tex  wrap_chars_chinese.tex
tex-fmt-lib/: Cargo.toml
tex-fmt-lib/src/: cli.rs  format.rs  ignore.rs  indent.rs  lib.rs  logging.rs  subs.rs  wrap.rs  write.rs
tex-fmt-lib/tests/source/: brackets.tex  comments.tex  higher_categories_thesis.bib  higher_categories_thesis.tex  ignore.tex  lists.tex  phd_dissertation_refs.bib  puthesis.cls  quiver.sty  verbatim.tex  wrap.tex
tex-fmt-wasm/: Cargo.toml  build.sh  test.mjs
tex-fmt-wasm/src/: lib.rs
web/: index.html  index.js
