[package]
name = "tex-fmt"
version = "0.5.5"
authors = ["William George Underwood"]
license = "MIT"
repository = "https://github.com/WGUNDERWOOD/tex-fmt"
edition = "2021"
description = "LaTeX formatter written in Rust"
keywords = ["latex", "formatter"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "tests/*",
    "extra/*",
    "*.nix",
    "flake.lock",
    "justfile",
    ".github/*",
    "completion/*",
    "man/*",
    "notes.org",
]

[dependencies]
clap = { version = "4.5.40", features = ["cargo"] }
clap_complete = "4.5.54"
clap_mangen = "0.2.27"
colored = "2.2.0"
dirs = "5.0.1"
env_logger = "0.11.8"
ignore = "0.4.23"
js-sys = "0.3.77"
log = "0.4.27"
merge = "0.2.0"
regex = "1.11.1"
similar = "2.7.0"
toml = "0.8.23"
wasm-bindgen = "0.2.100"
web-time = "1.1.0"

[features]
shellinstall = []

[build-dependencies]
clap = { version = "4.5.40", features = ["cargo"] }
clap_complete = "4.5.54"
clap_mangen = "0.2.27"

[profile.release]
codegen-units = 1

[lib]
name = "tex_fmt"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tex-fmt"
path = "src/bin.rs"
