[package]
name = "tex-fmt-lib"
description = "Library functions for tex-fmt"
readme.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.21", features = ["cargo"] }
colored = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
merge = "0.1.0"
regex = "1.11.1"
similar = "2.6.0"
toml = "0.8.19"
