[package]
name = "tex-fmt-wasm"
version.workspace = true
authors = ["William George Underwood", "Victor Powell <vicapow@gmail.com>"]
license.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
tex-fmt-lib = { path = "../tex-fmt-lib" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["console"]